--- a/templates/index.twig
+++ b/templates/index.twig
@@ -70,9 +70,16 @@
                 </form>
             </div>
             <div class="col-sm-6">
-                <div class="card">
+                <div class="card mb-3">
+                    <div class="card-header">Result</div>
                     <div class="card-body">
                         <pre>{{ result }}</pre>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">Diff</div>
+                    <div class="card-body">
+                        <pre>{{ diff }}</pre>
                     </div>
                 </div>
             </div>
