--- a/templates/index.twig
+++ b/templates/index.twig
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <h1>PHP-CS-Fixer Playground <span class="badge badge-primary">{{ phpCsFixerVersion }}</span></h1>
         <a href="https://github.com/ntzm/PHP-CS-Fixer-Playground/">GitHub</a>
         <div class="row">
