Show generated config

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -107,6 +107,12 @@
                         <pre><code class="language-diff">{{ diff }}</code></pre>
                     </div>
                 </div>
+                <div class="card">
+                    <div class="card-header">Config</div>
+                    <div class="card-body">
+                        <pre><code class="language-php">{{ generatedConfig }}</code></pre>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
