--- a/templates/index.twig
+++ b/templates/index.twig
@@ -101,7 +101,7 @@
                         <pre><code class="language-php">{{ result }}</code></pre>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card mb-3">
                     <div class="card-header">Diff</div>
                     <div class="card-body">
                         <pre><code class="language-diff">{{ diff }}</code></pre>
