Add unsupported notice

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -103,11 +103,12 @@
                                                 {% else %}
                                                     <input class="form-control" type="text" name="fixers[{{ fixer.name }}][{{ option.name }}]" value="{{ fixers[fixer.name][option.name] }}">
                                                 {% endif %}
-                                            {% endif %}
-                                            {% if option.allowedTypes == ['bool'] %}
+                                            {% elseif option.allowedTypes == ['bool'] %}
                                                 {% set checked = option.hasDefault and option.default == true %}
                                                 <input type="hidden" name="fixers[{{ fixer.name }}][{{ option.name }}]" value="false">
                                                 <input type="checkbox" name="fixers[{{ fixer.name }}][{{ option.name }}]" value="true"{{ checked ? ' checked' : '' }}> Enabled
+                                            {% else %}
+                                                <p>Unsupported types {{ option.allowedTypes|join(', ') }}</p>
                                             {% endif %}
                                         </div>
                                     {% endfor %}
