--- a/templates/index.twig
+++ b/templates/index.twig
@@ -49,7 +49,7 @@
                     </div>
                     <ul class="list-group">
                         {% for fixer in availableFixers %}
-                            {% set checked = fixers[fixer.name] != false %}
+                            {% set checked = fixers[fixer.name] ?? false %}
                             {% set deprecated = fixer is instanceof('PhpCsFixer\\Fixer\\DeprecatedFixerInterface') %}
                             {% set itemClasses = ['list-group-item'] %}
                             {% if deprecated %}
