Add noscript notice

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -16,6 +16,9 @@
 <body>
     <div class="container-fluid">
         <h1>PHP-CS-Fixer Playground <span class="badge badge-primary">{{ phpCsFixerVersion }}</span></h1>
+        <noscript>
+            <div class="alert alert-info" role="alert">This site works perfectly without JavaScript enabled, however if you want syntax highlighting, JavaScript is unfortunately required!</div>
+        </noscript>
         <a href="https://github.com/ntzm/PHP-CS-Fixer-Playground/">GitHub</a>
         <div class="row">
             <div class="col-sm-6">
