Move runs to dir

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -22,7 +22,7 @@
         <a href="https://github.com/ntzm/PHP-CS-Fixer-Playground/">GitHub</a>
         <div class="row">
             <div class="col-sm-6">
-                <form method="post" action="/">
+                <form method="post" action="/run">
                     <div class="form-group">
                         <textarea class="form-control" name="code" id="code" cols="30" rows="10">{{ code }}</textarea>
                     </div>
