Draw whitespace (buggy on diff)

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -7,6 +7,7 @@
     <title>PHP-CS-Fixer Playground</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha256-LA89z+k9fjgMKQ/kq4OO2Mrf8VltYml/VES+Rg0fh20=" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.13.0/themes/prism.min.css" integrity="sha256-6RI2bGiVbA9GqCSAFm96msi4ap50++uo5NYUQ+o7AXk=" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.13.0/plugins/show-invisibles/prism-show-invisibles.min.css" integrity="sha256-mhLIsMVR80BiRz+mG8IKgmGIguoQuTYxtPgUdmx3Jrw=" crossorigin="anonymous">
     <style>
         #code {
             font-family: monospace;
@@ -164,6 +165,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.13.0/prism.min.js" integrity="sha256-AqXn2u4UOZ36/xOhOEYrMIqgHrq1p8m88HJO+oPzPiM=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.13.0/plugins/show-invisibles/prism-show-invisibles.min.js" integrity="sha256-V62xAwTNFNOCJXJEuhm/kMsRDYrWnnULpww5h+y1j0s=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.13.0/components/prism-php.min.js" integrity="sha256-yQtytnnfraW6dL24hRbZtmTuhb7Y5l8o0wXesz/wIbI=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.13.0/components/prism-diff.min.js" integrity="sha256-2j19IpsajXc3FKagWaOLYxCvNv13NmR4mMP749TMBxg=" crossorigin="anonymous"></script>
 </body>
